# cs-130-webserver

./: .clang-format  .gitignore  CMakeLists.txt  POST  README.md  groups  integration_test_GET1_result  project.config
cmake/: CodeCoverageReportConfig.cmake
configs/: dev_config  prod_config  simple_config  test_config
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
hooks/: pre-commit
include/: HTTPHeader.h  I_file_handler_factory.h  I_request_handler.h  I_request_handler_factory.h  I_server.h  I_session.h  config_parser.h  crud_filesystem_manager.h  crud_handler.h  crud_handler_factory.h  echo_handler.h  echo_handler_factory.h  file_handler_factory.h  filesystem_mutex.h  global_websocket_state.h  health_handler.h  health_handler_factory.h  logger.h  not_found_handler.h  not_found_handler_factory.h  privileged_dirs.h  request.h  request_dispatcher.h  request_handler.h  request_handler_echo.h  request_handler_static.h  request_processor.h  response.h  server.h  serving_config.h  session.h  sleep_handler.h  sleep_handler_factory.h  static_handler.h  static_handler_factory.h  websocket_handler.h  websocket_info_handler.h  websocket_info_handler_factory.h
src/: I_file_handler_factory.cc  config_parser.cc  crud_filesystem_manager.cc  crud_handler.cc  crud_handler_factory.cc  echo_handler.cc  echo_handler_factory.cc  file_handler_factory.cc  global_websocket_state.cc  health_handler.cc  health_handler_factory.cc  logger.cc  not_found_handler.cc  not_found_handler_factory.cc  request.cc  request_dispatcher.cc  request_handler_echo.cc  request_handler_static.cc  request_processor.cc  response.cc  server.cc  server.h  server_main.cc  serving_config.cc  session.cc  session.h  sleep_handler.cc  sleep_handler_factory.cc  static_handler.cc  static_handler_factory.cc  websocket_handler.cc  websocket_info_handler.cc  websocket_info_handler_factory.cc
tests/: config_parser_test.cc  integration_test.sh  websocket_test.py
tests/EscapeSeqs/: success_escape1
tests/GetPortNumber/: nested_too_deep  no_server_label  port_negative
tests/IntegrationDiffs/: expected_nc_incorrect.txt  integration_test_GET1_exp  integration_test_PUT_exp
tests/QuotedStrings/: no_ws_after_quote  no_ws_before_quote
tests/SuccessiveClosingBrackets/: success_brackets1
tests/config_parser/: config_parser_test.cc
tests/config_parser/CommentTests/: comment1  comment_hides_token
tests/config_parser/EscapeSeqs/: success_escape2  success_escape3
tests/config_parser/GetFilePaths/: invalid_echo_uri  invalid_filepath  invalid_static_uri  many_paths  multiple_uses  partial_success  privileged_paths  success_combined  success_echo_only  success_static_path_only
tests/config_parser/GetPortNumber/: no_port_number  port_not_number  success_default_root  success_pn2  success_serve_files
tests/config_parser/QuotedStrings/: success_quote2  success_quote3  unmatched_quote
tests/config_parser/SuccessiveClosingBrackets/: success_brackets2  success_brackets3
tests/factories/: I_file_handler_factory_test.cc  crud_handler_factory_test.cc  echo_handler_factory_test.cc  file_handler_factory_test.cc  health_handler_factory_test.cc  not_found_handler_factory_test.cc  static_handler_factory_test.cc
tests/filesystem_managers/: crud_filesystem_manager_test.cc
tests/logger/: logger_test.cc
tests/request/: crud_handler_test.cc  echo_handler_test.cc  health_handler_test.cc  not_found_handler_test.cc  request_dispatcher_test.cc  request_handler_echo_test.cc  request_handler_static_test.cc  request_processor_test.cc  request_test.cc  static_handler_test.cc  websocket_info_handler_test.cc
tests/response/: response_test.cc
tests/server/: server_test.cc
tests/serving_config/: serving_config_test.cc
tests/session/: session_test.cc
tests/static_test_files/: chat.html  msg.proto  notepad.html  video.html
tests/websocket/: global_websocket_state_test.cc  websocket_handler_test.cc
